--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@ img{
 }
 
 
+@media (max-width:952px){
+ h4{
+   font-size:30px;
+  
+  /* height:1024px;
+  width:3024px */
+}
+
+}
+
+
+
+
+
+    
+
+
 
   </style>
   <!-- Add icon library -->
