--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@ img{
 @media (max-width:952px){
 
   nav ul li a {
-    font-size:12px;
+    font-size:10px;
+  }
+  nav{
+  font-size:10px;
+
   }
 
 }
