--- a/index.html
+++ b/index.html
@@ -113,10 +113,13 @@ img{
 @media (max-width:952px){
 
   nav ul li a {
-    font-size:10px;
+    font-size:11px;
   }
-  nav{
-  font-size:10px;
+  .navbar{
+
+  min-height: 50px;
+  height: 50px; 
+
 
   }
 
