--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <style>
     /* Remove the navbar's default rounded borders and increase the bottom margin */
     .navbar {
+       min-height: 50px;
+       height: 50px; 
       margin-bottom: 50px;
       border-radius: 0;
     }
@@ -119,6 +121,8 @@ img{
 
   min-height: 50px;
   height: 50px; 
+  margin-bottom: 50px;
+  border-radius: 0;
 
 
   }
