--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <style>
     /* Remove the navbar's default rounded borders and increase the bottom margin */
     .navbar {
-       min-height: 50px;
-       height: 50px; 
+      margin-bottom: 50px;
+      border-radius: 0;
     
     }
 
